--- a/myfinance-web-netcore/src/Views/Home/Index.cshtml
+++ b/myfinance-web-netcore/src/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "MF - My Finance";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem Vindo ao MF.</h1>
+    <p>Desenvolvido por <a href="https://github.com/leonardorlopes">Leo</a>.</p>
 </div>
