--- a/myfinance-web-netcore/src/Views/Shared/_Layout.cshtml
+++ b/myfinance-web-netcore/src/Views/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PlanoConta" asp-action="Index">Plano de Contas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Transações</a>
                         </li>
                     </ul>
                 </div>
