--- a/myfinance-web-netcore/src/Views/AccountPlan/Register.cshtml
+++ b/myfinance-web-netcore/src/Views/AccountPlan/Register.cshtml
@@ -1,26 +1,26 @@
-@model myfinance_web_netcore.Models.PlanoContaModel
+@model myfinance_web_netcore.Models.AccountPlanModel
 @{
     ViewData["Title"] = "Plano de Contas";
 }
 
 <h1>@ViewData["Title"]</h1>
 
-<form asp-controller="PlanoConta" asp-action="Cadastro" method="post">   
+<form asp-controller="AccountPlan" asp-action="Register" method="post">   
 
     @Html.HiddenFor(m => m.Id)
 
     <div class="form-group col-md-6">
-        @Html.LabelFor(m => m.Descricao)
-        @Html.TextBoxFor(m => m.Descricao, new { @class = "form-control" })
+        @Html.LabelFor(m => m.Description)
+        @Html.TextBoxFor(m => m.Description, new { @class = "form-control" })
     </div>
     
     <div class="form-group">
-        @Html.RadioButtonFor(model => model.Tipo, "D", false)
+        @Html.RadioButtonFor(model => model.Type, "D", false)
         @Html.Label("Despesa")
     </div>
 
     <div class="form-group">
-        @Html.RadioButtonFor(model => model.Tipo, "R", false)
+        @Html.RadioButtonFor(model => model.Type, "R", false)
         @Html.Label("Receita")
     </div>
 
@@ -36,6 +36,6 @@
 
 <script>
     function Voltar() {
-        window.location.href = "/PlanoConta/Index"
+        window.location.href = "/AccountPlan/Index"
     }
 </script>
